--- a/global_change_lab/templates/front_page.html
+++ b/global_change_lab/templates/front_page.html
@@ -24,19 +24,19 @@
 <div class="row" id="front-page-cols">
   <div class="medium-4 columns">
     <h1>Get activist skills</h1>
-    <div class="icon large trophy"></div>
+    <i class="icon-trophy large red"></i>
     <p>Skills are sets of training bits you need to change the world</p>
     <a href="{% url 'skills:skills_overview' %}" class="button join">See all skills</a>
   </div>
   <div class="medium-4 columns">
     <h1>Do training bits</h1>
-    <div class="icon large tools"></div>
+    <i class="icon-tools large red"></i>
     <p>Training bits are small pieces of inspiration, tools or background in activism and social change</p>
     <a href="{% url 'skills:trainingbits_overview' %}" class="button join">See all bits</a>
   </div>
   <div class="medium-4 columns">
     <h1>Share with others</h1>
-    <div class="icon large chat"></div>
+    <i class="icon-chat large red"></i>
     <p>Share what you do and learn from other activists</p>
     <a href="{% url 'skills:shares_overview' %}" class="button join">See all shares</a>
   </div>
