--- a/global_change_lab/templates/partials/trainer_trainingbit.html
+++ b/global_change_lab/templates/partials/trainer_trainingbit.html
@@ -2,7 +2,7 @@
 <div class="trainer-trainingbit">
     <h3><a href="{% url url_name item.id %}">{{item.name}}</a></h3>
     <ul class="icon-list">
-      <li><span class="icon small users"></span>432</li>
-      <li><span class="icon small chat"></span>119</li>
+      <li><i class="icon-users small"></i>432</li>
+      <li><i class="icon-chat small"></i>119</li>
     </ul>
 </div>
