--- a/global_change_lab/templates/trainer_dashboard.html
+++ b/global_change_lab/templates/trainer_dashboard.html
@@ -98,7 +98,7 @@
   <div class="row">
     <div class="medium-6 columns">
       <h3>Statistics</h3><br>
-      <a class="stats-link red" href="{% url 'statistics' %}">See statistics <span class="icon line-graph"></span></a>
+      <a class="stats-link red" href="{% url 'statistics' %}">See statistics <i class="icon-chart-line"></i></a>
     </div>
   </div>
 </div>
