--- a/scss/trainer_dashboard.scss
+++ b/scss/trainer_dashboard.scss
@@ -60,7 +60,7 @@
     }
   }
 
-  ul.icon-list, ol.icon-list {
+  ul.icons, ol.icons {
     font-size: rem-calc(10px);
     margin-left: 0;
     margin-bottom: 0.3rem;
