--- a/skills/templates/skills/partials/like_counter.html
+++ b/skills/templates/skills/partials/like_counter.html
@@ -1,4 +1,4 @@
-<span class="icon small heart red"></span>
+<i class="icon-heart small red"></i>
 <div id="like-count" class="count">
   <div class="{% if user_like %}unlike{% else %}like{% endif %}">
     {% if user_like %}
