--- a/skills/templates/skills/partials/trainingbit_header.html
+++ b/skills/templates/skills/partials/trainingbit_header.html
@@ -2,7 +2,7 @@
 <div id="trainingbit-cover" style="background-image: url({{trainingbit.getImage}})">
   {% if back_url %}
   <a class="back-button" href="{{ back_url }}">
-    <span class="icon circled-left"></span>{{ back_text }}
+    <i class="icon-left-circled"></i>{{ back_text }}
   </a>
   {% endif %}
   <div class="info-container">
