--- a/skills/templates/skills/partials/trainingbit_parts.html
+++ b/skills/templates/skills/partials/trainingbit_parts.html
@@ -21,7 +21,7 @@ window.GCL.trainingbit_editable = window.GCL.trainingbit_editable || false;
 <script type="text/template" id="link-template">
   <div class="link">
     <div class="icon-wrapper">
-      <span class="icon medium link black"></span>
+      <i class="icon-link medium black"></i>
     </div>
     <a target="_blank" href="<%= url %>" title="<%= title %>" style="display: inline-block; float: left">
       <span class="title"><%= title %></span>
