--- a/skills/templates/skills/skill_edit.html
+++ b/skills/templates/skills/skill_edit.html
@@ -17,7 +17,8 @@
   {% endif %}
 
   {# Info/help button #}
-  <a href="#" class="info-icon" data-reveal-id="info-modal" data-reveal>&#8505;</a>
+  <!-- TODO: Check if this even works, after changing to  -->
+  <a href="#" class="info-icon" data-reveal-id="info-modal" data-reveal><i class="icon-info"></i></a>
   <div id="info-modal" class="reveal-modal" data-reveal>
     <h1>{% itrans 'Building a Skill' %}</h1>
     {% itrans "Make a description that piques the user's interest." %}
