--- a/skills/templates/skills/trainingbit_view.html
+++ b/skills/templates/skills/trainingbit_view.html
@@ -60,7 +60,7 @@
   <p class="trainingbit-description">{{ trainingbit.description }}</p>
   <div id="learn" class="trainingbit-section">
     <h1>1. Learn</h1>
-    <a href="#" class="info-icon" data-reveal-id="learn-info-modal" data-reveal>&#8505;</a>
+    <a href="#" class="info-icon" data-reveal-id="learn-info-modal" data-reveal><i class="icon-info"></i></a>
     <div id="learn-info-modal" class="reveal-modal" data-reveal>
       <h1>Learn</h1>
       {% itrans "This first part of the training bit is focused on giving you the right input and inspiration about the topic. Whether it is a text on the background of the topic, a tutorial on how to use a specific tool or model or some input that inspires your creative thinking it will help you to understand." %}
@@ -70,7 +70,7 @@
   </div>
   <div id="act" class="trainingbit-section">
     <h1>2. Act</h1>
-    <a href="#" class="info-icon" data-reveal-id="act-info-modal" data-reveal>&#8505;</a>
+    <a href="#" class="info-icon" data-reveal-id="act-info-modal" data-reveal><i class="icon-info"></i></a>
     <div id="act-info-modal" class="reveal-modal" data-reveal>
       <h1>Act</h1>
       {% itrans "The second part of each training bit is focused on action. Here you will get some actions to do whether you have to go out in the street and take photos, compose a song or answer some tricky questions, this is where we want you to act and use the inspiration you got in the first part of the bit." %}
@@ -80,7 +80,7 @@
   </div>
   <div id="share" class="trainingbit-section">
     <h1>3. Share</h1>
-    <a href="#" class="info-icon" data-reveal-id="share-info-modal" data-reveal>&#8505;</a>
+    <a href="#" class="info-icon" data-reveal-id="share-info-modal" data-reveal><i class="icon-info"></i></a>
     <div id="share-info-modal" class="reveal-modal" data-reveal>
       <h1>Share</h1>
       {% itrans "The last part of the training bit - and a step you need to do to complete it - is to share some specific actions you just did. This is a great oportunity for you to share something that is relevant and inspiring for the rest of us." %}
