--- a/global_change_lab/templates/account/signup.html
+++ b/global_change_lab/templates/account/signup.html
@@ -75,15 +75,15 @@
     <div class="medium-6 columns social-login">
       <h2 class="column-header">{% itrans 'Or sign up with these services' %}</h2>
       <a class="social-button facebook" href="{% provider_login_url "facebook" %}">
-        <div class="logo"><span class="icon-social facebook white"></span></div>
+        <div class="logo"><span class="icon-facebook white"></span></div>
         <div class="text"><span>Sign up with <strong>Facebook</strong></span></div>
       </a>
       <a class="social-button twitter" href="{% provider_login_url "twitter" %}">
-        <div class="logo"><span class="icon-social twitter white"></span></div>
+        <div class="logo"><span class="icon-twitter white"></span></div>
         <div class="text"><span>Sign up with <strong>Twitter</strong></span></div>
       </a>
       <a class="social-button google" href="{% provider_login_url "google" %}">
-        <div class="logo"><span class="icon-social google-plus white"></span></div>
+        <div class="logo"><span class="icon-gplus white"></span></div>
         <div class="text"><span>Sign up with <strong>Google+</strong></span></div>
       </a>
   </div>
