--- a/scss/app.scss
+++ b/scss/app.scss
@@ -66,57 +66,26 @@
 @import "scss/flatpage";
 @import "scss/poshytip";
 
-%entypo {
-  font-family: 'EntypoRegular';
-}
-%entypo-social {
-  font-family: 'EntypoSocialRegular';
-}
-
-.icon {
-  @extend %entypo;
-  // font-family: Entypo;
-  font-size: 2rem;
-  font-weight: normal;
-  line-height: 0;
+[class^="icon-"] {
+  font-size: 1.2rem;
   vertical-align: middle;
   // display: inline-block;
   // padding-bottom: 10px;
 
   &.medium {
-    font-size: 4rem;
+    font-size: 2rem;
   }
 
   &.large {
-    font-size: 10rem;
-    line-height: 5rem;
-    color: $gcl-red;
-  }
-  &.black {
-    color: black;
-  }
-}
-.icon-social {
-  @extend %entypo-social;
-  // font-family: Entypo;
-  font-size: 2rem;
-  font-weight: normal;
-  line-height: 0;
-  vertical-align: middle;
-  // display: inline-block;
-  // padding-bottom: 10px;
-
-  &.medium {
     font-size: 4rem;
   }
 
-  &.large {
-    font-size: 10rem;
-    line-height: 5rem;
-    color: $gcl-red;
-  }
   &.black {
     color: black;
+  }
+  
+  &.red {
+    color: $gcl-red;
   }
 }
 
@@ -156,6 +125,10 @@
   // position: absolute;
   // top: rem-calc(10px);
   // right: rem-calc(5px);
+
+  [class^="icon-"] {
+    font-size: inherit;
+  }
 }
 
 a.button.admin-button, .top-bar-section li a.button.admin-button {
@@ -456,8 +429,6 @@ div.gcl-column2 {
 // White-on-red "info" icon that usually open a reveal modal with a help-text.
 // Used in: trainingbit_view, skill_edit, trainingbit_edit, trainingbit_edit_content
 .info-icon {
-  @extend %entypo;
-  font-size: 2.5rem;
   float: right;
   color: white;
   background-color: $gcl-red;
