--- a/skills/templates/skills/partials/comment_entry.html
+++ b/skills/templates/skills/partials/comment_entry.html
@@ -4,7 +4,7 @@
 <div class="comment gcl-object" style="margin-left:{{ comment.level }}rem;" id="comment-{{comment.id}}" data-comment-pk="{{comment.id}}">
 
   {% if comment.is_deleted %}
-  <!-- <span class="icon block"></span> -->
+  <!-- <i class="icon-block"></i> -->
   <p class="content deleted">This comment has been deleted</p>
   {% else %}
   <p class="content">{{ comment.text }}</p>
