--- a/skills/templates/skills/partials/comment_entry_compact.html
+++ b/skills/templates/skills/partials/comment_entry_compact.html
@@ -4,7 +4,7 @@
 <div class="comment-compact gcl-object" style="margin-left:{{ comment.level }}rem;" id="comment-{{comment.id}}">
 
     {% if comment.is_deleted %}
-    <span class="icon block"></span>
+    <i class="icon-block"></i>
     {% else %}
     {% if maxchars %}
     <p class="content">{{ comment.text|truncatechars:maxchars }}</p>
