--- a/skills/templates/skills/trainingbit_edit.html
+++ b/skills/templates/skills/trainingbit_edit.html
@@ -11,7 +11,7 @@
 {% block content %}
 <div class="page-buttons">
   {# Info/help button #}
-  <a href="#" class="info-icon" data-reveal-id="info-modal" data-reveal>&#8505;</a>
+  <a href="#" class="info-icon" data-reveal-id="info-modal" data-reveal><i class="icon-info"></i></a>
   <div id="info-modal" class="reveal-modal" data-reveal>
     <h1>{% itrans 'General guidelines in making bits' %}</h1>
     <p>{% itrans 'When you make your training bit follow these guidelines.' %}</p>
