Upgrading Foundation to make orbit work for podio issue 142

--- a/global_change_lab/templates/new_user.html
+++ b/global_change_lab/templates/new_user.html
@@ -19,20 +19,20 @@
     </div>
     <div class="columns medium-7">
       <ul class="carousel" data-orbit
-          data-options="slide_number: false; timer: false">
-        <li>
+          data-options="slide_number: false; timer: false;">
+        <li data-orbit-slide="skills">
           <h2>Skills</h2>
           <p>
             {% itrans "Skills are sets of selected training bits you need to change the world. You can take the training bits in any order you'll like but you need to take them all to get the skill." %}
           </p>
         </li>
-        <li>
+        <li data-orbit-slide="training-bits">
           <h2>Training Bits</h2>
           <p>
             {% itrans "Training bits are small pieces of inspiration, tools or background in activism and social change. Each training bit has something for you to learn, to act upon and to share with other activists. You are free to choose the bits you want and do them in your own pace." %}
           </p>
         </li>
-        <li>
+        <li data-orbit-slide="share">
           <h2>Sharing is caring!</h2>
           <p>
             {% itrans "To complete a training bit you must share something you learned. Each training bit will explain what. When we share we can all inspire each other so we can truly change the world." %}
